crates/libs/frieze/tests/ui/enum_untagged.stderr
error: frieze: `#[serde(untagged)]` enums are not supported. Use an internal tag instead: `#[serde(tag = "kind")]`.
 --> tests/ui/enum_untagged.rs:6:9
  |
6 | #[serde(untagged)]
  |         ^^^^^^^^
